--- a/gene-oracle/Dockerfile
+++ b/gene-oracle/Dockerfile
@@ -1,8 +1,6 @@
 FROM tensorflow/tensorflow:latest-gpu
 MAINTAINER Cole McKnight <cbmckni@clemson.edu> Colin Targonski <ctargon@clemson.edu>
 
-WORKDIR /root
-
 # install package dependencies
 RUN apt-get update \
    && apt-get install -y git python-pip python-tk vim \
@@ -10,10 +8,9 @@ RUN apt-get update \
    && pip install update
 
 # install gene-oracle
-RUN git clone https://github.com/ctargon/gene-oracle 
-
-# make input data directories
-RUN mkdir data subsets
+WORKDIR /root
+RUN git clone https://github.com/ctargon/gene-oracle
 
 # install Kubernetes entrypoint
-COPY run.sh run.sh
+WORKDIR /root
+COPY ../run.sh run.sh
