--- a/gene-oracle/nextflow.config
+++ b/gene-oracle/nextflow.config
@@ -5,6 +5,7 @@ manifest {
 }
 
 params {
+	input_dir = "${PWD}/data"
 	dataset = "${PWD}/data/gtex/gtex_gct_data_float_v7.npy"
 	gene_list = "${PWD}/data/gtex/gtex_gene_list_v7.npy"
 	sample_json = "${PWD}/data/gtex/gtex_tissue_count_v7.json"
@@ -52,7 +53,15 @@ trace {
 
 
 
+docker {
+	sudo = true
+	runOptions = "--runtime=nvidia --mount type=bind,src=${params.input_dir},dst=${params.input_dir},readonly --mount type=bind,src=${params.output_dir},dst=${params.output_dir}"
+}
+
+
+
 process {
+	container = "bentsherman/gene-oracle:latest"
 	errorStrategy = { "${task.attempt}" <= "${params.execution.max_retries}" ? "retry" : "${params.execution.error_strategy}" }
 	maxRetries = "${params.execution.max_retries}"
 	// maxErrors = 1000
